changes to files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Duckslord's Domain</title>
 </head>
 <body>
-    <h1>Welcome to my Domain</h1>
+    <h1 class="main-text-shadow"; "font-family">Welcome to my Domain</h1>
 <div class="italic">
     <p>Long Time ago, there was a Duck, who wanted to ascend throughout the world, though others did object, so he fought with all his might. Hence never forget that with only might you might versus others fight!</p>
     </div>
