change to index html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p>Long Time ago, there was a Duck, who wanted to ascend throughout the world, though others did object, so he fought with all his might. Hence never forget that with only might you might versus others fight!</p>
     </div>
 
-    <h2></h2>
+    <h2>Duckslord is a part of Primori Morte Community in Blizzard's World of Warcraft environment.</h2>
 </body>
 </html>
