changed a bit with <pre>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1 class="main-text-shadow"; "font-family">Welcome to my Domain</h1>
 <div class="italic">
-    <p>Long Time ago, there was a Duck, who wanted to ascend throughout the world, though others did object, so he fought with all his might. Hence never forget that with only might you might versus others fight!</p>
+    <pre>Long Time ago, there was a Duck, who wanted to ascend throughout the world,<br>though others did object, so he fought with all his might.<br>Hence never forget that with only might you might versus others fight!</pre>
     </div>
 
     <h2>Duckslord is a part of Primori Morte Community in Blizzard's World of Warcraft environment.</h2>
