added parallax effect + font sizes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <div class="parallax"></div>
+<script src="myscripts.js"></script>
     <link rel="stylesheet" href="style.css">
 
     <meta charset="UTF-8">
@@ -9,11 +10,18 @@
     <title>Duckslord's Domain</title>
 </head>
 <body>
-    <h1 class="main-text-shadow"; "font-family">Welcome to my Domain</h1>
-<div class="italic">
-    <pre>Long Time ago, there was a Duck, who wanted to ascend throughout the world,<br>though others did object, so he fought with all his might.<br>Hence never forget that with only might you might versus others fight!</pre>
-    </div>
+    
+    <h1 class="main-text-shadow font-main font-size2";>
+    
+        Welcome to my Domain
+    </h1>
+    <div class="parallax"></div>
+    <div class="italic font-size">
+        <pre>Long Time ago, there was a Duck, who wanted to ascend throughout the world,<br>though others did object, so he fought with all his might.<br>Hence never forget that with only might you might versus others fight!</pre>
 
-    <h2>Duckslord is a part of Primori Morte Community in Blizzard's World of Warcraft environment.</h2>
+        </div>
+        <div class="parallax"></div>
+        <p class="font-size">Duckslord is a part of Primori Morte Community in Blizzard's World of Warcraft environment.</p>
+        <div class="parallax"></div>
 </body>
 </html>
