--- a/index.html
+++ b/index.html
@@ -1,27 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <div class="parallax"></div>
-<script src="myscripts.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <head>
+  
+    <script src="myscripts.js"></script>
+    <link rel="stylesheet" href="./style.css" />
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Duckslord's Domain</title>
-</head>
-<body>
-    
-    <h1 class="main-text-shadow font-main font-size2";>
-    
-        Welcome to my Domain
-    </h1>
-    <div class="parallax"></div>
-    <div class="italic font-size">
-        <pre>Long Time ago, there was a Duck, who wanted to ascend throughout the world,<br>though others did object, so he fought with all his might.<br>Hence never forget that with only might you might versus others fight!</pre>
-
-        </div>
-        <div class="parallax"></div>
-        <p class="font-size">Duckslord is a part of Primori Morte Community in Blizzard's World of Warcraft environment.</p>
-        <div class="parallax"></div>
-</body>
+  </head>
+  <body>
+  
+    <div class="Menu">
+      <div class="Menu-list">
+        <a href="#" class="Menu-list-item" >
+          Home
+          <span class="Mask"><span>Home</span></span>
+          <span class="Mask"><span>Home</span></span>
+        </a>
+        <a href="#" class="Menu-list-item" >
+          About
+          <span class="Mask"><span>About</span></span>
+          <span class="Mask"><span>About</span></span>
+        </a>
+        <a href="#" class="Menu-list-item" >
+          Guild
+          <span class="Mask"><span>Guild</span></span>
+          <span class="Mask"><span>Guild</span></span>
+        </a>
+        <a href="#" class="Menu-list-item" >
+          Media
+          <span class="Mask"><span>Media</span></span>
+          <span class="Mask"><span>Media</span></span>
+        </a>
+      </div>
+    </div>
+  </body>
 </html>
